--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
     "*.js",
     "**/*.js",
     "c:\\Users\\danilo.barbosa\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.15\\p5types\\global.d.ts"
-, "Sketch.js", "main.js"  ]
+, "Sketch.js", "App.js"  ]
 }
